<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.musicbox1.Fragments.ResetPassword">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241">

        <ImageView
            android:layout_width="359dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/logo_musicbox" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/no_te_preocupes_solo_necesitamos_el_correo_con_el_que_te_registraste"
            android:textColor="@color/gold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/grey"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gold"
            android:textColor="@color/white"
            android:text="@string/reiniciar_contrase_a"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/responseMessage"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:visibility="invisible"
            android:textColor="@color/gold"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/resetPasswordProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminateTint="@color/gold"
            android:layout_marginTop="12dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/paraatras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pagina_atras"
            android:textColor="@color/gold"
            android:textSize="18sp"
            android:layout_marginBottom="40dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>